--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.68"
 pkcs7 = "0.4.0-pre.0"
-
+static_init = "1.0.3"
 
 [dependencies.picky]
 version = "7.0.0-rc.3"
